Implement flight search using QueryDSL and add cheapest flights endpoint